Added All Assets

--- a/canapp/canapp/pubspec.yaml
+++ b/canapp/canapp/pubspec.yaml
@@ -68,6 +68,68 @@ flutter:
     - assets/resources/beverages.jpg
     - assets/resources/biryani.jpeg
     - assets/resources/butter.jpeg
+    - assets/resources/cakes.jpeg
+    - assets/resources/caramel.jpeg
+    - assets/resources/channelfile.jpeg
+    - assets/resources/chic65.jpeg
+    - assets/resources/chocolates.jpeg
+    - assets/resources/chow.jpeg
+    - assets/resources/cola.jpeg
+    - assets/resources/collog.png
+    - assets/resources/crunchy.jpeg
+    - assets/resources/cup.jpeg
+    - assets/resources/double mint.jpeg
+    - assets/resources/double.jpeg
+    - assets/resources/download (1).jpeg
+    - assets/resources/drinks.jpeg
+    - assets/resources/feast.jpeg
+    - assets/resources/fevistick.jpeg
+    - assets/resources/forest.jpeg
+    - assets/resources/fried.jpeg
+    - assets/resources/headlogo.png
+    - assets/resources/icecreame.jpg
+    - assets/resources/junior.jpeg
+    - assets/resources/maincourse.jpg
+    - assets/resources/mask.jpeg
+    - assets/resources/pen.jpeg
+    - assets/resources/pencil.jpeg
+    - assets/resources/print.jpeg
+    - assets/resources/printing.jpg
+    - assets/resources/sandwich.jpeg
+    - assets/resources/senior.jpeg
+    - assets/resources/stationery.jpg
+    - assets/resources/tea.jpeg
+    - assets/resources/tmslfood.png
+    - assets/resources/vanilla.jpeg
+    - assets/resources/vegsand.jpeg
+    - assets/resources/xerox.jpeg
+
+
+
+
+
+    
+
+
+
+    
+
+
+
+    
+    
+
+
+
+
+
+
+    
+      
+  
+
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
